---------------------------------------------------------------------------------------------------
Version: 0.3.10
Date: ?
---------------------------------------------------------------------------------------------------
Version: 0.3.9
Date: 2025.09.02
  Features:
    - Slight performance improvements for faster loading
  Bugfixes:
    - Removed item randomization softlock from making incorrect item replacements
---------------------------------------------------------------------------------------------------
Version: 0.3.8
Date: 2025.08.03
  Bugfixes:
    - Disabled cliff size randomization due to startup crashes
---------------------------------------------------------------------------------------------------
Version: 0.3.7
Date: 2025.05.29
  Features:
    - Randomized module effects
  Bugfixes:
    - Fixed a few bugs in the dependency graph's construction
    - Fixed that beacons could be randomized to over 64 supply area, causing a startup error
    - Fixed a fundamental logic error for the clamping in the numerical randomization algorithm that has slipped under my radar for several weeks
---------------------------------------------------------------------------------------------------
Version: 0.3.6
Date: 2025.05.29
  Bugfixes:
    - Fixed some spoil result logic
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 2025.05.25
  Bugfixes:
    - Fixed crash with Shortcuts for 2.0
    - Trash slots are now checked during force respawn/teleporting
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 2025.05.22
  Balancing:
    - Belts don't randomize as badly
    - Rocket parts aren't randomized during item randomization
  Bugfixes:
    - Clamped seed value to within the allowed range to prevent hard crashes
---------------------------------------------------------------------------------------------------
Version: 0.3.3