@@ -1,6 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.10
 Date: ?
+  Features:
+    - Capsule action randomization
+  Bugfixes:
+    - Fixed recipe costs with recipe randomization being unbalanced in space age
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.9
 Date: 2025.09.02
